Adding comments to Apex classes

--- a/force-app/main/default/classes/VDT_AnalysisDashboardFilterController.cls
+++ b/force-app/main/default/classes/VDT_AnalysisDashboardFilterController.cls
@@ -1,4 +1,14 @@
+/**
+ * @description Apex Controller to expose Apex Methods to javascript LWC controllers
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public inherited sharing class VDT_AnalysisDashboardFilterController {
+
+    /**
+     * @return  `String` with Standard Field Identifier
+     * @exception AuraHandledException
+     */
     @AuraEnabled(cacheable=true)
     public static String getStandardFieldIdentifier() {
         try {
