--- a/force-app/main/default/classes/VDT_CalculationLogsController.cls
+++ b/force-app/main/default/classes/VDT_CalculationLogsController.cls
@@ -1,4 +1,14 @@
+/**
+ * @author      BASE Life Science
+ * @since       2021.03.01
+ * @description Exposes apex methods to be used in LWC component's Javascript controller
+ */
 public inherited sharing class VDT_CalculationLogsController {
+
+    /**
+     * @return  `List<VDT_Data_Calculation__c>` List of Data Calculation records that have been completed (either their status is COMPLETED or ERROR)
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static List<VDT_Data_Calculation__c> fetchFinishedCalculations(){
         try {
