--- a/force-app/main/default/classes/VDT_CalculationStatusTriggerHandler.cls
+++ b/force-app/main/default/classes/VDT_CalculationStatusTriggerHandler.cls
@@ -1,3 +1,9 @@
+/**
+ * @author      BASE Life Science
+ * @since       2021.03.01
+ * @description Whenever an exception is thrown, a new platform event (VDT_Calculation_Status_Update__e) is triggered and the Data Calculation record that caused the exception
+ *              is updated accordingly
+ */
 public with sharing class VDT_CalculationStatusTriggerHandler extends VDT_TriggerHandler.DelegateBase {
     public VDT_CalculationStatusTriggerHandler() {}
 
@@ -6,6 +12,10 @@ public with sharing class VDT_CalculationStatusTriggerHandler extends VDT_Trigge
         setAfterInsert((Map<Id, VDT_Calculation_Status_Update__e>) newMap);
     }
 
+    /**
+     * 
+     * @param newMap Data Calculation records' status is updated based on the event's status
+     */
     private void setAfterInsert(Map<Id, VDT_Calculation_Status_Update__e> newMap) {
         List<VDT_Data_Calculation__c> calculations = new List<VDT_Data_Calculation__c>();
 
