--- a/force-app/main/default/classes/VDT_DateRangePicker.cls
+++ b/force-app/main/default/classes/VDT_DateRangePicker.cls
@@ -1,4 +1,14 @@
+/**
+ * @description Exposes Apex Method to LWC Javascript controller
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public inherited sharing class VDT_DateRangePicker {
+
+    /**
+     * @return  `Integer` number of years to be added as options on the Start Year picklist component.
+     * @exception AuraHandledException
+     */
     @AuraEnabled(cacheable=true)
     public static Integer getStartDateYearDecrement(){
         try {
