--- a/force-app/main/default/classes/VDT_LogSeverity.cls
+++ b/force-app/main/default/classes/VDT_LogSeverity.cls
@@ -1,3 +1,8 @@
+/**
+ * @description Enum with All valid values used when inserting a new log record
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public enum VDT_LogSeverity {
     DEBUG,
     INFO,
