--- a/force-app/main/default/classes/VDT_MasterDataAnalysisController.cls
+++ b/force-app/main/default/classes/VDT_MasterDataAnalysisController.cls
@@ -1,12 +1,18 @@
 /**
- * @author          m.caceres@polsource.com
- * @created_date:   2021-03-12
- * @description:    provide access to service layer methods to Lightning Web Components.
+ * @description Provides Access to Apex Service Methods
+ * @author BASE Life Science
+ * @since 2021.03.01
  */
 public inherited sharing class VDT_MasterDataAnalysisController {
 
     private static final String ACCOUNT_SOBJECT = 'Account';
 
+    /**
+     * 
+     * @param jsonSearchParameters Search parameters selected by the User on the Master Data Analysis screen
+     * @return  `VDT_DataCalculationService.DataCalculation` record with all information about the calculation job: Status, Completion Date and Output data generated
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static VDT_DataCalculationService.DataCalculation searchExistingCalculations(String jsonSearchParameters) {
         try {
@@ -23,6 +29,11 @@ public inherited sharing class VDT_MasterDataAnalysisController {
         }
     }
 
+    /**
+     * @description Method is used to determine what values to use when populating the options on the Picklist component (Master Data Analysis)
+     * @return  `String` Field Type of the configured Country field for Account.
+     * @exception AuraHandledException
+     */
     @AuraEnabled(cacheable=true)
     public static String getAccountCountryFieldType() {
         try {
@@ -35,6 +46,12 @@ public inherited sharing class VDT_MasterDataAnalysisController {
         }
     }
 
+    /**
+     * @description If Country field for Account is `Picklist` field, then the select component on Master Data Analysis will be populated with the active
+     *              options that picklist has.
+     * @return  `List<VDT_OptionWrapper>` List of valid Account countries
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static List<VDT_OptionWrapper> getCountryOptions() {
         try {
@@ -47,6 +64,12 @@ public inherited sharing class VDT_MasterDataAnalysisController {
         }
     }
 
+    /**
+     * @description If the country field configured for Account is a `Lookup` field, then we need to query the related object and populate the options with all records
+     *              returned by the query.
+     * @return  `List<VDT_OptionWrapper>` List of valid Account countries
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static List<VDT_OptionWrapper> getCountryOptionFromReference() {
         try {
@@ -59,6 +82,11 @@ public inherited sharing class VDT_MasterDataAnalysisController {
         }
     }
 
+    /**
+     * @description If the queue has availability, a new job is triggered for the selected jobs.
+     * @param jsonSearchParameters Search parameters selected by the User on the Master Data Analysis screen
+     * @exception AuraHandledException
+     */    
     @AuraEnabled
     public static void recalculateMasterAnalysis(String jsonSearchParameters) {
         try {
@@ -74,6 +102,9 @@ public inherited sharing class VDT_MasterDataAnalysisController {
         }
     }
 
+    /**
+     * @return  `Boolean` value that determines whether the `Territory Management` column should be shown or not in the Details table on Master Data Analysis Screen
+     */
     @AuraEnabled(cacheable=true)
     public static Boolean isTerritoryManagementActive(){
         return VDT_CustomMetadataService.isTerritoryManagementActive();
