--- a/force-app/main/default/classes/VDT_OptionWrapper.cls
+++ b/force-app/main/default/classes/VDT_OptionWrapper.cls
@@ -1,3 +1,8 @@
+/**
+ * @description Plain Object used to populate the select LWC component
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public inherited sharing class VDT_OptionWrapper {
     @AuraEnabled public String label;
     @AuraEnabled public String value;
