--- a/force-app/main/default/classes/VDT_ProductAdoptionController.cls
+++ b/force-app/main/default/classes/VDT_ProductAdoptionController.cls
@@ -1,9 +1,16 @@
 /**
- * @author          m.caceres@polsource.com
- * @created_date:   2021-03-25
+ * @description provides access to apex service methods to LWC javascript controllers
+ * @author BASE Life Science
+ * @since 2021.03.01
  */
 public inherited sharing class VDT_ProductAdoptionController {
 
+    /**
+     * 
+     * @param jsonSearchParameters Search parameters selected by the User on the Product Hierarchy and Adoption screen
+     * @return  `VDT_DataCalculationService.DataCalculation` record with all information about the calculation job: Status, Completion Date and Output data generated
+     * @exception AuraHandledException
+     */    
     @AuraEnabled
     public static VDT_DataCalculationService.DataCalculation searchExistingCalculations(String jsonSearchParameters) {
         try {
@@ -20,6 +27,11 @@ public inherited sharing class VDT_ProductAdoptionController {
         }
     }
 
+    /**
+     * @description If the queue has availability, a new job is triggered for the selected jobs.
+     * @param jsonSearchParameters Search parameters selected by the User on the Master Data Analysis screen
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static void recalculateProductAdoption(String jsonSearchParameters){
         try {
@@ -35,6 +47,11 @@ public inherited sharing class VDT_ProductAdoptionController {
         }
     }
 
+    /**
+     * 
+     * @return  `VDT_ProductService.ProductAdoptionData`
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static VDT_ProductService.ProductAdoptionData getProductCatalogTree() {
         try {
@@ -46,6 +63,10 @@ public inherited sharing class VDT_ProductAdoptionController {
         }
     }
 
+    /**
+     * @return  `String` Field Type of Country field for Product
+     * @exception 
+     */
     @AuraEnabled
     public static String getProductCountryFieldType() {
         try {
@@ -58,7 +79,12 @@ public inherited sharing class VDT_ProductAdoptionController {
             throw new AuraHandledException(e.getMessage());
         }
     }
-
+    
+    /**
+     * @description if country field for product is a `PICKLIST` field, the only active options from that field are elegible for user's selection
+     * @return  `List<VDT_OptionWrapper>` country options
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static List<VDT_OptionWrapper> getCountryOptions() {
         try {
@@ -71,6 +97,12 @@ public inherited sharing class VDT_ProductAdoptionController {
         }
     }
 
+    /**
+     * @description if country field for Product is a `LOOKUP` field, then the options available for selection are taken from the
+     *              list of related sobject records
+     * @return  `List<VDT_OptionWrapper>` country options to be added to the select LWC component
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static List<VDT_OptionWrapper> getCountryOptionFromReference() {
         try {
@@ -83,11 +115,19 @@ public inherited sharing class VDT_ProductAdoptionController {
         }
     }
 
+    /**
+     * @description If country field for Product is a `TEXT` field, then the options shown on the select component will be taken
+     *              from the getDefaultCountries from Default Settings
+     * @return  `List<VDT_OptionWrapper>`
+     */
     @AuraEnabled
     public static List<VDT_OptionWrapper> getCountryCodeFromProductSetup() {
         return VDT_CustomMetadataService.getDefaultCountries();
     }
 
+    /**
+     * @return  `String` Country field that identifies a product as an International product
+     */
     @AuraEnabled(cacheable=true)
     public static String getInternationalCountryValue() {
         return VDT_CustomMetadataService.getInternationalCountryValue();
