--- a/force-app/main/default/classes/VDT_RecordTypeSelector.cls
+++ b/force-app/main/default/classes/VDT_RecordTypeSelector.cls
@@ -1,11 +1,22 @@
+/**
+ * @description Provides methods to retrieve records from `RecordType` SObject
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public inherited sharing class VDT_RecordTypeSelector {
 
     private Integer limitValue;
 
+    /**
+     * @return  `String` name of SObject the query will be run against
+     */
     public String getObjectName() {
         return 'RecordType';
     }
 
+    /**
+     * @return  `List<String>` Default fields to be added to the SELECT statement
+     */
     public List<String> getFieldList() {
         return new List<String>{
             RecordType.Id.getDescribe().getName(),
@@ -15,15 +26,25 @@ public inherited sharing class VDT_RecordTypeSelector {
         };
     }
 
+    /**
+     * @return  `String` Comma Separated names of all Fields
+     */
     public String getFieldListString() {
         return String.join(this.getFieldList(), ',');
     }
     
+    /**
+     * @param limitValue Limit the number of max number of records to be returned by the query
+     * @return  `VDT_RecordTypeSelector` instance
+     */
     public VDT_RecordTypeSelector withLimit(Integer limitValue) {
         this.limitValue = limitValue;
         return this;
     }
 
+    /**
+     * @return  `String` if a limit has been set, return the LIMIT clause
+     */
     public String getLimitString() {
         String limitString = '';
         if (this.limitValue != null) {
@@ -32,6 +53,12 @@ public inherited sharing class VDT_RecordTypeSelector {
         return limitString;
     }
 
+    /**
+     * 
+     * @param sobjectName SObject API Name
+     * @param recordTypeDevName Record Type API Name
+     * @return  `List<RecordType>` Record Type that match the filters
+     */
     public List<RecordType> getRecordTypeByObjectAndName(String sobjectName, String recordTypeDevName) {
         String whereString = 'SObjectType = :sobjectName AND DeveloperName = :recordTypeDevName';
         String query = String.format(
@@ -49,6 +76,10 @@ public inherited sharing class VDT_RecordTypeSelector {
         return Database.query(query);
     }
 
+    /**
+     * @param sobjectName SOBject API Name
+     * @return  `List<RecordType>` all Record Types available for the given SObject
+     */
     public List<RecordType> getAllRecordTypesByObject(String sobjectName) {
         String whereString = 'SObjectType = :sobjectName';
         String query = String.format(
