--- a/force-app/main/default/classes/VDT_TerritoryAnalysisController.cls
+++ b/force-app/main/default/classes/VDT_TerritoryAnalysisController.cls
@@ -1,5 +1,16 @@
+/**
+ * @description provides access to apex service methods to LWC javascript controllers
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public inherited sharing class VDT_TerritoryAnalysisController {
 
+    /**
+     * 
+     * @param jsonSearchParameters Search parameters selected by the User on the Territory Analysis screen
+     * @return  `VDT_DataCalculationService.DataCalculation` record with all information about the calculation job: Status, Completion Date and Output data generated
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static VDT_DataCalculationService.DataCalculation searchExistingCalculations(String jsonSearchParameters) {
         try {
@@ -15,6 +26,11 @@ public inherited sharing class VDT_TerritoryAnalysisController {
         }
     }
 
+    /**
+     * @description If the queue has availability, a new job is triggered for the selected jobs.
+     * @param jsonSearchParameters Search parameters selected by the User on the Master Data Analysis screen
+     * @exception AuraHandledException
+     */
     @AuraEnabled
     public static void recalculateTerritoryAnalysis(String jsonSearchParameters) {
         try {
