--- a/force-app/main/default/classes/VDT_TerritoryManagementBatch.cls
+++ b/force-app/main/default/classes/VDT_TerritoryManagementBatch.cls
@@ -1,3 +1,8 @@
+/**
+ * @description Batch job used to calculate all territory management information.
+ * @author BASE Life Science
+ * @since 2021.03.01
+ */
 public with sharing class VDT_TerritoryManagementBatch implements Database.Batchable<SObject>, Database.Stateful {
 
     private VDT_Data_Calculation__c territoryDataCalculation;
@@ -8,6 +13,12 @@ public with sharing class VDT_TerritoryManagementBatch implements Database.Batch
         this.territoryDataCalculation = territoryDataCalculation;
     }
 
+    /**
+     * @description creates a SOQL query for all account and filter them based on the Countries selected from the Search form
+     *              on the `Territory Management` search form screen.
+     * @param bc 
+     * @return  `Database.QueryLocator`
+     */
     public Database.QueryLocator start(Database.BatchableContext bc) {
         String countryField = VDT_CustomMetadataService.getCountryFieldForObject('Account');
         String specialtyField = VDT_CustomMetadataService.getAccountSpecialtyField();
@@ -36,12 +47,24 @@ public with sharing class VDT_TerritoryManagementBatch implements Database.Batch
         return Database.getQueryLocator(query);
     }
 
+    /**
+     * @description using the builder object, calculate the territory management for the account records
+     *              on the current batch's execution
+     * @param bc 
+     * @param accounts 
+     */
     public void execute(Database.BatchableContext bc, List<Account> accounts) {
         this.territoryDataCalculation.Batches_Number__c += 1;
         update this.territoryDataCalculation;
         this.builder.withRecords(accounts).calculate();
     }
 
+    /**
+     * @description Once all batches are completed, the VDT_Data_Calculation__c record status is updated to COMPLETED,
+     *              Creates a new attachment record and links it to the VDT_Data_Calculation__c record, lastly,
+     *              a new Email alert is sent letting the user who triggered the job know the job has been completed.
+     * @param bc 
+     */
     public void finish(Database.BatchableContext bc) {
         try {
             this.territoryDataCalculation.VDT_Job_End_Date__c = Datetime.now();
